--- a/index.html
+++ b/index.html
@@ -7,7 +7,216 @@
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	
+	<header class="header">
+		<nav class="nav">
+			<a class="logo">
+				<picture>
+					<source media="(min-width: 1150px)" srcset="images/logo-desktop.svg">
+					<source media="(min-width: 768px)" srcset="images/logo-tablet.svg">
+					<img class="logo__img" src="images/logo-mobile.svg" alt="логотип">
+				</picture>
+			</a>
+			<ul class="nav__list">
+				<li class="nav__item">
+					<a class="nav__link" href="catalog.html">
+						Каталог товаров
+					</a>
+				</li>
+				<li class="nav__item">
+					<a class="nav__link" href="form.html">
+						Вязание на заказ
+					</a>
+				</li>
+				<li class="nav__item">
+					<a class="nav__link" href="#">
+						Новые поступления
+					</a>
+				</li>
+				<li class="nav__item">
+					<a class="nav__link" href="#">
+						Распродажа
+					</a>
+				</li>
+			</ul>
+			<div class="user">
+				<ul class="user__list">
+					<li class="user__item">
+						<a class="user__link" href="#">
+							Поиск по сайту
+						</a>
+					</li>
+					<li class="user__item">
+						<a class="user__link" href="#">
+							Корзина: пока пуста
+						</a>
+					</li>
+				</ul>
+			</div>
+			<p class="delivery">Бесплатная доставка по России</p>
+		</nav>
+	</header>
+
+	<main>
+		<section class="main-section">
+			<h1 class="title">
+				Милые штуки ручной 
+				работы для дома
+			</h1>
+			<ul class="main-section__list">
+				<li class="main-section__item">
+					<a class="main-section__link" href="#">
+						Предметы 
+						интерьера
+					</a>
+				</li>
+				<li class="main-section__item">
+					<a class="main-section__link" href="#">
+						Детские 
+						игрушки
+					</a>
+				</li>
+			</ul>
+		</section>
+		<section class="baskets">
+			<h2 class="title">Вязаные корзинки</h2>
+			<ul class="baskets__list">
+				<li class="baskets__item">
+					<p class="baskets__status">
+						Товар недели
+					</p>
+					<p class="baskets__info">
+						Экологически чистая пряжа, 
+						ручная работа. Доступны в 
+						шести расцветках, и трех размерах.
+					</p>
+					<table class="baskets__table">
+						<tr>
+							<td>Цвет:</td>
+							<td>«Тиффани»/серый</td>
+						</tr>
+						<tr>
+							<td>Диаметр:</td>
+							<td>25 см</td>
+						</tr>
+						<tr>
+							<td>Высота:</td>
+							<td>15 см</td>
+						</tr>
+					</table>
+					<picture>
+						<source media="(min-width: 1150px)" srcset="images/content/basket-img-desktop.jpg">
+						<source media="(min-width: 768px)" srcset="images/content/basket-img-tablet.jpg">
+						<img class="baskets__img" src="images/content/basket-img-mobile.jpg" alt="Вязанная корзинка">
+					</picture>
+					<p class="baskets__price">
+						Цена: 990 руб.
+					</p>
+					<a class="baskets__btn btn" href="#">Заказать</a>
+				</li>
+			</ul>
+		</section>
+		<section class="about">
+			<ul class="about__list">
+				<li class="about__item">
+					Экологически 
+					чистые материалы
+				</li>
+				<li class="about__item">
+					Скандинавский стиль 
+					по российской цене
+				</li>
+				<li class="about__item">
+					Увеличивает лайки
+					на фотографиях
+				</li>
+				<li class="about__item">
+					Связано вручную с 
+					любовью и умилением
+				</li>
+				<li class="about__item">
+					Поддержка отечественного производителя
+				</li>
+				<li class="about__item">
+					Поставляется в 
+					подарочной упаковке
+				</li>
+			</ul>
+		</section>
+		<section class="reviews">
+			<h2 class="title">Отзывы</h2>
+			<ul class="reviews__list">
+				<li class="reviews__item">
+					<p class="reviews__text">
+						Я молодая мама, но всё 
+						равно фотографии не 
+						набирали и близко такого 
+						количества лайков, как 
+						у популярных инстамамочек.
+						В отчаянии, я накупила 
+						аксессуаров и игрушек в Мишке, 
+						и мои фотографии сразу 
+						стали более стильными, а 
+						также набирают больше лайков!
+					</p>
+					<p class="reviews__name">
+						Анастасия Красильникова
+						<a class="reviews__mail" href="#">@misssssiskras</a>
+					</p>
+				</li>
+			</ul>
+			<a class="reviews__btn btn" href="#">Написать</a>
+		</section>
+	</main>
+
+	<footer class="footer">
+		<div class="footer__info">
+			<p class="footer__mail">
+				e-mail
+				<a class="footer__mail-link" href="#">info@mimimishkashop.ru</a>
+			</p>
+			<p class="footer__address">
+				адрес:
+				<span class="footer__address-info">
+					г. Санкт-Петербург,
+					ул. Большая Конюшенная, 
+					д. 19/8, офис 101
+				</span>
+			</p>
+		</div>
+		<picture>
+			<source media="(min-width: 1150px)" srcset="images/map-desktop.jpg">
+			<source media="(min-width: 768px)" srcset="images/map-tablet.jpg">
+			<img class="footer__map" src="images/map-mobile.jpg" alt="Карта">
+		</picture>
+		<a class="footer__btn btn" href="#">Напишите нам</a>
+		<div class="footer__bottom">
+			<a class="footer__logo" href="#">
+				<img class="footer__logo-img" src="images/footer-logo.svg" alt="логотип">
+			</a>
+			<div class="social-networks">
+				<ul class="social-networks__list">
+					<li class="social-networks__item">
+						<a class="social-networks__link" href="#">
+							<span class="visually-hidden">Инстаграм</span>
+						</a>
+					</li>
+					<li class="social-networks__item">
+						<a class="social-networks__link" href="#">
+							<span class="visually-hidden">Фейсбук</span>
+						</a>
+					</li>
+					<li class="social-networks__item">
+						<a class="social-networks__link" href="#">
+							<span class="visually-hidden">Твиттер</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+			<p class="footer__copy">
+				Разработано
+			</p>
+		</div>
+	</footer>
 
 	<script src="js/main.min.js"></script>
 </body>
