--- a/index.html
+++ b/index.html
@@ -190,28 +190,66 @@
 			</div>
 		</section>
 		<section class="reviews">
-			<h2 class="title">Отзывы</h2>
-			<ul class="reviews__list">
-				<li class="reviews__item">
-					<p class="reviews__text">
-						Я молодая мама, но всё 
-						равно фотографии не 
-						набирали и близко такого 
-						количества лайков, как 
-						у популярных инстамамочек.
-						В отчаянии, я накупила 
-						аксессуаров и игрушек в Мишке, 
-						и мои фотографии сразу 
-						стали более стильными, а 
-						также набирают больше лайков!
-					</p>
-					<p class="reviews__name">
-						Анастасия Красильникова
-						<a class="reviews__mail" href="#">@misssssiskras</a>
-					</p>
-				</li>
-			</ul>
-			<a class="reviews__btn btn" href="#">Написать</a>
+			<div class="reviews__inner">
+				<h2 class="reviews__title title">Отзывы</h2>
+				<ul class="reviews__list">
+					<li class="reviews__item">
+						<p class="reviews__text">
+							Я молодая мама, но всё 
+							равно фотографии не 
+							набирали и близко такого 
+							количества лайков, как 
+							у популярных инстамамочек.
+							В отчаянии, я накупила 
+							аксессуаров и игрушек в Мишке, 
+							и мои фотографии сразу 
+							стали более стильными, а 
+							также набирают больше лайков!
+						</p>
+						<p class="reviews__name">
+							Анастасия Красильникова
+							<a class="reviews__mail" href="#">@misssssiskras</a>
+						</p>
+					</li>
+					<li class="reviews__item">
+						<p class="reviews__text">
+							Я молодая мама, но всё 
+							равно фотографии не 
+							набирали и близко такого 
+							количества лайков, как 
+							у популярных инстамамочек.
+							В отчаянии, я накупила 
+							аксессуаров и игрушек в Мишке, 
+							и мои фотографии сразу 
+							стали более стильными, а 
+							также набирают больше лайков!
+						</p>
+						<p class="reviews__name">
+							Анастасия Красильникова
+							<a class="reviews__mail" href="#">@misssssiskras</a>
+						</p>
+					</li>
+					<li class="reviews__item">
+						<p class="reviews__text">
+							Я молодая мама, но всё 
+							равно фотографии не 
+							набирали и близко такого 
+							количества лайков, как 
+							у популярных инстамамочек.
+							В отчаянии, я накупила 
+							аксессуаров и игрушек в Мишке, 
+							и мои фотографии сразу 
+							стали более стильными, а 
+							также набирают больше лайков!
+						</p>
+						<p class="reviews__name">
+							Анастасия Красильникова
+							<a class="reviews__mail" href="#">@misssssiskras</a>
+						</p>
+					</li>
+				</ul>
+				<a class="reviews__btn btn" href="#">Написать</a>
+			</div>
 		</section>
 	</main>
 
