--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
 			<nav class="nav nav--closed nav--nojs">
 				<button class="nav__burger-btn" type="button"></button>
 				<div class="logo">
-					<a class="logo__link">
+					<a class="logo__link" href="index.html">
 						<picture>
 							<source media="(min-width: 1150px)" srcset="images/logo-desktop.svg">
 							<source media="(min-width: 768px)" srcset="images/logo-tablet.svg">
@@ -24,7 +24,7 @@
 				</div>
 				<ul class="nav__list">
 					<li class="nav__item">
-						<a class="nav__link" href="catalog.html">
+						<a class="nav__link">
 							Каталог товаров
 						</a>
 					</li>
@@ -210,7 +210,7 @@
 		<div class="footer__bottom">
 			<div class="footer__bottom-wrap">
 				<div class="footer__logo-wrap">
-					<a class="footer__logo">
+					<a class="footer__logo" href="#">
 						<img class="footer__logo-img" src="images/footer-logo.svg" alt="логотип">
 					</a>
 				</div>
