--- a/catalog.html
+++ b/catalog.html
@@ -169,7 +169,14 @@
 					Процесс
 					производства
 				</h2>
-				<div class="video__content"></div>
+				<div class="video__content">
+					<picture>
+						<source media="(min-width: 1150px)" srcset="images/content/video-desktop.jpg">
+						<source media="(min-width: 768px)" srcset="images/content/video-tablet.jpg">
+							<img class="video__img" src="images/content/video-mobile.jpg" alt="Видео">
+					</picture>
+					<svg class="video__icon" xmlns="http://www.w3.org/2000/svg" width="101" height="77" viewBox="0 0 457.62 349.5"><path d="M440.71,82.49s-4.19-31.85-17.21-45.81C407,18.31,388.62,18.2,380.13,17.15,319.56,12.5,228.75,12.5,228.75,12.5h-.23s-90.8,0-151.38,4.65c-8.48,1.05-26.85,1.16-43.36,19.53C20.87,50.75,16.57,82.49,16.57,82.49s-4.07,37.32-4.07,74.64v35a747.32,747.32,0,0,0,4.3,74.64S21,298.63,34,312.58C50.52,331,72,330.37,81.68,332.35c34.65,3.48,147.07,4.65,147.07,4.65s90.92-.12,151.5-4.77c8.49-1.05,26.86-1.16,43.37-19.53,12.9-13.95,17.2-45.81,17.2-45.81a747.32,747.32,0,0,0,4.3-74.64v-35C445,119.81,440.71,82.49,440.71,82.49Z" fill="#63d1bb" stroke="#fff" stroke-miterlimit="10" stroke-width="25"/><polygon points="174.69 93.54 174.69 255.84 309.91 174.69 174.69 93.54" fill="#fff"/></svg>
+				</div>
 				<div class="video__descr">
 					<p class="video__text">
 						По просьбам наших любимых 
@@ -184,7 +191,7 @@
 	</main>
 
 	<footer class="footer">
-		<div class="footer__top-box">
+		<!-- <div class="footer__top-box">
 			<h2 class="footer__title title">Контакты</h2>
 			<div class="footer__top">
 				<div class="footer__info">
@@ -206,7 +213,7 @@
 				</div>
 			</div>
 			<a class="footer__btn btn" href="#">Напишите нам</a>
-		</div>
+		</div> -->
 		<div class="footer__bottom">
 			<div class="footer__bottom-wrap">
 				<div class="footer__logo-wrap">
