--- a/form.html
+++ b/form.html
@@ -24,12 +24,12 @@
 				</div>
 				<ul class="nav__list">
 					<li class="nav__item">
-						<a class="nav__link">
+						<a class="nav__link" href="catalog.html">
 							Каталог товаров
 						</a>
 					</li>
 					<li class="nav__item">
-						<a class="nav__link" href="form.html">
+						<a class="nav__link">
 							Вязание на заказ
 						</a>
 					</li>
@@ -65,129 +65,118 @@
 		</div>
 	</header>
 
-	<main class="catalog-page">
+	<main class="form-page">
 		<h1 class="page-title title">
-			Каталог товаров
+			Вязание на заказ
 		</h1>
+		<p class="form-page__descr">
+			Мы будем рады воплотить в жизнь 
+			ваши пожелания! Заполните простую 
+			форму заказа и мы свяжемся с 
+			вами, чтобы уточнить детали.
+		</p>
 
-		<div class="container">
-			<section class="catalog">
-				<h2 class="visually-hidden">Каталог товаров</h2>
-				<ul class="catalog__list">
-					<li class="catalog__item">
-						<div class="catalog__info-box">
-							<div class="catalog__info">
-								<h3 class="catalog__name">
-									<a class="catalog__name-link" href="#">
-										Зайчик-попрыгайчик
-									</a>
-								</h3>
-								<p class="catalog__feature">
-									Рост 30 см, вес 200 г
-								</p>
-							</div>
-							<div class="catalog__price-box">
-								<p class="catalog__price">
-									1 200 руб.
-								</p>
-								<a class="catalog__basket-link" href="#">
-									<svg class="catalog__basket-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="0 0 20.29 18.85"><path d="M19.54,7.23H16.39L13,.41a.75.75,0,0,0-1-.33.76.76,0,0,0-.34,1l3.08,6.14H5.58L8.65,1.09a.75.75,0,0,0-.34-1,.74.74,0,0,0-1,.33L3.9,7.23H.75a.75.75,0,0,0,0,1.5H.91l.85,3a.76.76,0,0,0-.31.59.74.74,0,0,0,.69.74l1.66,5.8H16.5l1.65-5.8a.73.73,0,0,0,.38-1.33l.86-3h.15a.75.75,0,0,0,0-1.5ZM15.36,17.35H4.93L3.71,13.06H16.59ZM17,11.56H3.28L2.47,8.73H17.83Z" transform="translate(0 0)" fill="#231f20"/></svg>
-								</a>
-							</div>
-						</div>
-						<a class="catalog__img-box" href="#">
-							<picture>
-								<source media="(min-width: 1150px)" srcset="images/content/catalog-img-1-desktop.jpg">
-								<source media="(min-width: 768px)" srcset="images/content/catalog-img-1-tablet.jpg">
-									<img class="catalog__img" src="images/content/catalog-img-1.jpg" alt="вязанный зайчик">
-							</picture>
-						</a>
-					</li>
-					<li class="catalog__item">
-						<div class="catalog__info-box">
-							<div class="catalog__info">
-								<h3 class="catalog__name">
-									<a class="catalog__name-link" href="#">
-										Корзинка для белья
-									</a>
-								</h3>
-								<p class="catalog__feature">
-									Диаметр 15 см, высота 10 см
-								</p>
-							</div>
-							<div class="catalog__price-box">
-								<p class="catalog__price">
-									690 руб.
-								</p>
-								<a class="catalog__basket-link" href="#">
-									<svg class="catalog__basket-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="0 0 20.29 18.85"><path d="M19.54,7.23H16.39L13,.41a.75.75,0,0,0-1-.33.76.76,0,0,0-.34,1l3.08,6.14H5.58L8.65,1.09a.75.75,0,0,0-.34-1,.74.74,0,0,0-1,.33L3.9,7.23H.75a.75.75,0,0,0,0,1.5H.91l.85,3a.76.76,0,0,0-.31.59.74.74,0,0,0,.69.74l1.66,5.8H16.5l1.65-5.8a.73.73,0,0,0,.38-1.33l.86-3h.15a.75.75,0,0,0,0-1.5ZM15.36,17.35H4.93L3.71,13.06H16.59ZM17,11.56H3.28L2.47,8.73H17.83Z" transform="translate(0 0)" fill="#231f20"/></svg>
-								</a>
-							</div>
-						</div>
-						<a class="catalog__img-box" href="#">
-							<picture>
-								<source media="(min-width: 1150px)" srcset="images/content/catalog-img-2-desktop.jpg">
-								<source media="(min-width: 768px)" srcset="images/content/catalog-img-2-tablet.jpg">
-									<img class="catalog__img" src="images/content/catalog-img-2.jpg" alt="Корзинка для белья">
-							</picture>
-						</a>
-					</li>
-					<li class="catalog__item">
-						<div class="catalog__info-box">
-							<div class="catalog__info">
-								<h3 class="catalog__name">
-									<a class="catalog__name-link" href="#">
-										Большая корзинка для игрушек
-									</a>
-								</h3>
-								<p class="catalog__feature">
-									Диаметр 30 см, высота 30 см
-								</p>
-							</div>
-							<div class="catalog__price-box">
-								<p class="catalog__price">
-									1 500 руб.
-								</p>
-								<a class="catalog__basket-link" href="#">
-									<svg class="catalog__basket-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="0 0 20.29 18.85"><path d="M19.54,7.23H16.39L13,.41a.75.75,0,0,0-1-.33.76.76,0,0,0-.34,1l3.08,6.14H5.58L8.65,1.09a.75.75,0,0,0-.34-1,.74.74,0,0,0-1,.33L3.9,7.23H.75a.75.75,0,0,0,0,1.5H.91l.85,3a.76.76,0,0,0-.31.59.74.74,0,0,0,.69.74l1.66,5.8H16.5l1.65-5.8a.73.73,0,0,0,.38-1.33l.86-3h.15a.75.75,0,0,0,0-1.5ZM15.36,17.35H4.93L3.71,13.06H16.59ZM17,11.56H3.28L2.47,8.73H17.83Z" transform="translate(0 0)" fill="#231f20"/></svg>
-								</a>
-							</div>
-						</div>
-						<a class="catalog__img-box" href="#">
-							<picture>
-								<source media="(min-width: 1150px)" srcset="images/content/catalog-img-3-desktop.jpg">
-								<source media="(min-width: 768px)" srcset="images/content/catalog-img-3-tablet.jpg">
-									<img class="catalog__img" src="images/content/catalog-img-3.jpg" alt="Большая корзинка для игрушек">
-							</picture>
-						</a>
-					</li>
-				</ul>
-			</section>
-	
-			<section class="video">
-				<h2 class="video__title">
-					Процесс
-					производства
-				</h2>
-				<div class="video__content">
-					<picture>
-						<source media="(min-width: 1150px)" srcset="images/content/video-desktop.jpg">
-						<source media="(min-width: 768px)" srcset="images/content/video-tablet.jpg">
-							<img class="video__img" src="images/content/video-mobile.jpg" alt="Видео">
-					</picture>
-					<svg class="video__icon" xmlns="http://www.w3.org/2000/svg" width="101" height="77" viewBox="0 0 457.62 349.5"><path d="M440.71,82.49s-4.19-31.85-17.21-45.81C407,18.31,388.62,18.2,380.13,17.15,319.56,12.5,228.75,12.5,228.75,12.5h-.23s-90.8,0-151.38,4.65c-8.48,1.05-26.85,1.16-43.36,19.53C20.87,50.75,16.57,82.49,16.57,82.49s-4.07,37.32-4.07,74.64v35a747.32,747.32,0,0,0,4.3,74.64S21,298.63,34,312.58C50.52,331,72,330.37,81.68,332.35c34.65,3.48,147.07,4.65,147.07,4.65s90.92-.12,151.5-4.77c8.49-1.05,26.86-1.16,43.37-19.53,12.9-13.95,17.2-45.81,17.2-45.81a747.32,747.32,0,0,0,4.3-74.64v-35C445,119.81,440.71,82.49,440.71,82.49Z" fill="#63d1bb" stroke="#fff" stroke-miterlimit="10" stroke-width="25"/><polygon points="174.69 93.54 174.69 255.84 309.91 174.69 174.69 93.54" fill="#fff"/></svg>
-				</div>
-				<div class="video__descr">
-					<p class="video__text">
-						По просьбам наших любимых 
-						фолловеров мы сняли для вас 
-						подробное видео о том, как 
-						появляются наши товары.
-					</p>
-					<a class="video__btn btn" href="#">Сделать заказ</a>
-				</div>
-			</section>
-		</div>
+		<form class="form" action="#">
+			<fieldset class="form__type">
+				<legend>Тип</legend>
+				<label class="form__type-label">
+					<input type="radio" name="type" value="accessory" checked>
+					<span class="radio-indicator"></span>
+					<span class="form__type-text">
+						Аксессуар для 
+						интерьера
+					</span>
+				</label>
+				<label class="form__type-label">
+					<input type="radio" name="type" value="toy">
+					<span class="radio-indicator"></span>
+					<span class="form__type-text">
+						Детская игрушка
+					</span>
+				</label>
+			</fieldset>
+
+			<fieldset class="form__color">
+				<legend>Цвет</legend>
+				<label class="form__color-label">
+					<input type="checkbox" name="color" value="white" checked>
+					<span class="ckeckbox-indicator"></span>
+					<span class="form__color-text">
+						Белый
+					</span>
+				</label>
+				<label class="form__color-label">
+					<input type="checkbox" name="color" value="grey" checked>
+					<span class="ckeckbox-indicator"></span>
+					<span class="form__color-text">
+						Серый
+					</span>
+				</label>
+				<label class="form__color-label">
+					<input type="checkbox" name="color" value="tiffany">
+					<span class="ckeckbox-indicator"></span>
+					<span class="form__color-text">
+						«Тиффани»
+					</span>
+				</label>
+				<label class="form__color-label">
+					<input type="checkbox" name="color" value="black">
+					<span class="ckeckbox-indicator"></span>
+					<span class="form__color-text">
+						Черный
+					</span>
+				</label>
+				<label class="form__color-label">
+					<input type="checkbox" name="color" value="pink">
+					<span class="ckeckbox-indicator"></span>
+					<span class="form__color-text">
+						Розовый
+					</span>
+				</label>
+				<label class="form__color-label">
+					<input type="checkbox" name="color" value="orange">
+					<span class="ckeckbox-indicator"></span>
+					<span class="form__color-text">
+						Оранжевый
+					</span>
+				</label>
+			</fieldset>
+
+			<fieldset class="form__FIO">
+				<legend>ФИО</legend>
+				<label class="form__FIO-label">
+					<span class="form__FIO-text">Имя:</span>
+					<input type="text" name="name" placeholder="Введите ваше имя*">
+				</label>
+				<label class="form__FIO-label">
+					<span class="form__FIO-text">Фамилия:</span>
+					<input type="text" name="surname" placeholder="Укажите фамилию*">
+				</label>
+				<label class="form__FIO-label">
+					<span class="form__FIO-text">Отчество:</span>
+					<input type="text" name="patronymic" placeholder="Отчество, если желаете">
+				</label>
+			</fieldset>
+
+			<fieldset class="form__contacts">
+				<label class="form__contacts-label">
+					<span class="form__contacts-text">тел</span>
+					<input type="tel" name="phone" placeholder="+7 ХХХ ХХ ХХ*">
+				</label>
+				<label class="form__contacts-label">
+					<span class="form__contacts-text">E-mail</span>
+					<input type="email" name="e-mail" placeholder="Ваш Email*">
+				</label>
+			</fieldset>
+
+			<fieldset class="form__additionally">
+				<legend>Доп</legend>
+				<textarea name="text" cols="30" rows="10" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+			</fieldset>
+
+			<small class="form__required">*Поля обязательны для заполнения</small>
+			<button class="form__btn btn" type="submit">отправить заказ</button>
+		</form>
 	</main>
 
 	<footer class="footer">
