added form page mobile styles

--- a/form.html
+++ b/form.html
@@ -77,105 +77,123 @@
 		</p>
 
 		<form class="form" action="#">
-			<fieldset class="form__type">
-				<legend>Тип</legend>
-				<label class="form__type-label">
-					<input type="radio" name="type" value="accessory" checked>
-					<span class="radio-indicator"></span>
-					<span class="form__type-text">
-						Аксессуар для 
-						интерьера
-					</span>
-				</label>
-				<label class="form__type-label">
-					<input type="radio" name="type" value="toy">
-					<span class="radio-indicator"></span>
-					<span class="form__type-text">
-						Детская игрушка
-					</span>
-				</label>
-			</fieldset>
+			<div class="container">
+				<fieldset class="form__group form__type">
+					<legend class="form__legend">Тип</legend>
+					<div class="form__label-box">
+						<label class="form__label form__type-label">
+							<input class="form__radio-inp visually-hidden" type="radio" name="type" value="accessory" checked>
+							<span class="form__radio-indicator"></span>
+							<span class="form__type-text">
+								Аксессуар для 
+								интерьера
+							</span>
+						</label>
+						<label class="form__label form__type-label">
+							<input class="form__radio-inp visually-hidden" type="radio" name="type" value="toy">
+							<span class="form__radio-indicator"></span>
+							<span class="form__type-text">
+								Детская игрушка
+							</span>
+						</label>
+					</div>
+				</fieldset>
+			</div>
 
-			<fieldset class="form__color">
-				<legend>Цвет</legend>
-				<label class="form__color-label">
-					<input type="checkbox" name="color" value="white" checked>
-					<span class="ckeckbox-indicator"></span>
-					<span class="form__color-text">
-						Белый
-					</span>
-				</label>
-				<label class="form__color-label">
-					<input type="checkbox" name="color" value="grey" checked>
-					<span class="ckeckbox-indicator"></span>
-					<span class="form__color-text">
-						Серый
-					</span>
-				</label>
-				<label class="form__color-label">
-					<input type="checkbox" name="color" value="tiffany">
-					<span class="ckeckbox-indicator"></span>
-					<span class="form__color-text">
-						«Тиффани»
-					</span>
-				</label>
-				<label class="form__color-label">
-					<input type="checkbox" name="color" value="black">
-					<span class="ckeckbox-indicator"></span>
-					<span class="form__color-text">
-						Черный
-					</span>
-				</label>
-				<label class="form__color-label">
-					<input type="checkbox" name="color" value="pink">
-					<span class="ckeckbox-indicator"></span>
-					<span class="form__color-text">
-						Розовый
-					</span>
-				</label>
-				<label class="form__color-label">
-					<input type="checkbox" name="color" value="orange">
-					<span class="ckeckbox-indicator"></span>
-					<span class="form__color-text">
-						Оранжевый
-					</span>
-				</label>
-			</fieldset>
+			<div class="form__group-wrapper">
+				<fieldset class="form__group form__color">
+					<legend class="form__legend form__color-legend">Цвет</legend>
+					<div class="form__label-box">
+						<label class="form__label form__color-label">
+							<input class="form__checkbox-inp visually-hidden" type="checkbox" name="color" value="white" checked>
+							<span class="form__checkbox-indicator"></span>
+							<span class="form__color-text">
+								Белый
+							</span>
+						</label>
+						<label class="form__label form__color-label">
+							<input class="form__checkbox-inp visually-hidden" type="checkbox" name="color" value="grey" checked>
+							<span class="form__checkbox-indicator"></span>
+							<span class="form__color-text">
+								Серый
+							</span>
+						</label>
+						<label class="form__label form__color-label">
+							<input class="form__checkbox-inp visually-hidden" type="checkbox" name="color" value="tiffany">
+							<span class="form__checkbox-indicator"></span>
+							<span class="form__color-text">
+								«Тиффани»
+							</span>
+						</label>
+						<label class="form__label form__color-label">
+							<input class="form__checkbox-inp visually-hidden" type="checkbox" name="color" value="black">
+							<span class="form__checkbox-indicator"></span>
+							<span class="form__color-text">
+								Черный
+							</span>
+						</label>
+						<label class="form__label form__color-label">
+							<input class="form__checkbox-inp visually-hidden" type="checkbox" name="color" value="pink">
+							<span class="form__checkbox-indicator"></span>
+							<span class="form__color-text">
+								Розовый
+							</span>
+						</label>
+						<label class="form__label form__color-label">
+							<input class="form__checkbox-inp visually-hidden" type="checkbox" name="color" value="orange">
+							<span class="form__checkbox-indicator"></span>
+							<span class="form__color-text">
+								Оранжевый
+							</span>
+						</label>
+					</div>
+				</fieldset>
+			</div>
 
-			<fieldset class="form__FIO">
-				<legend>ФИО</legend>
-				<label class="form__FIO-label">
-					<span class="form__FIO-text">Имя:</span>
-					<input type="text" name="name" placeholder="Введите ваше имя*">
-				</label>
-				<label class="form__FIO-label">
-					<span class="form__FIO-text">Фамилия:</span>
-					<input type="text" name="surname" placeholder="Укажите фамилию*">
-				</label>
-				<label class="form__FIO-label">
-					<span class="form__FIO-text">Отчество:</span>
-					<input type="text" name="patronymic" placeholder="Отчество, если желаете">
-				</label>
-			</fieldset>
+			<div class="container">
+				<fieldset class="form__group form__FIO">
+					<legend class="form__legend form__FIO-legend">ФИО</legend>
+					<label class="form__label form__FIO-label">
+						<span class="form__FIO-text">Имя:</span>
+						<input class="form__FIO-inp form__text-inp" type="text" name="name" placeholder="Введите ваше имя*">
+					</label>
+					<label class="form__label form__FIO-label">
+						<span class="form__FIO-text">Фамилия:</span>
+						<input class="form__FIO-inp form__text-inp" type="text" name="surname" placeholder="Укажите фамилию*">
+					</label>
+					<label class="form__label form__FIO-label">
+						<span class="form__FIO-text">Отчество:</span>
+						<input class="form__FIO-inp form__text-inp" type="text" name="patronymic" placeholder="Отчество, если желаете">
+					</label>
+				</fieldset>
+			</div>
 
-			<fieldset class="form__contacts">
-				<label class="form__contacts-label">
-					<span class="form__contacts-text">тел</span>
-					<input type="tel" name="phone" placeholder="+7 ХХХ ХХ ХХ*">
-				</label>
-				<label class="form__contacts-label">
-					<span class="form__contacts-text">E-mail</span>
-					<input type="email" name="e-mail" placeholder="Ваш Email*">
-				</label>
-			</fieldset>
+			<div class="form__group-wrapper">
+				<fieldset class="form__group form__contacts">
+					<label class="form__label form__contacts-label">
+						<span class="form__contacts-text">тел</span>
+						<input class="form__contacts-inp form__text-inp" type="tel" name="phone" placeholder="+7 ХХХ ХХ ХХ*">
+						<svg class="form__contacts-phone-icon" xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 24.83 24.33"><path d="M17.32,24.33H16.21A17.19,17.19,0,0,1,5.1,18.56,19.34,19.34,0,0,1,0,6.82V5.46A3.35,3.35,0,0,1,1.07,3.37,4.52,4.52,0,0,1,3.59,1.82,3.18,3.18,0,0,1,5.82,2.89,7.51,7.51,0,0,1,6.6,5.26,8.81,8.81,0,0,1,7.08,8c-.18,1.2-1.76,1.7-2.23,2.57a16.68,16.68,0,0,0,7.47,8.35c.85-.47,1.6-1.87,2.77-1.89a4.77,4.77,0,0,1,1.4.34c.48.14.9.32,1.32.48.7.27,2,.62,2.37,1.21a3.46,3.46,0,0,1,.58,2.23C20.57,22.51,18.54,23.88,17.32,24.33Z"/><path d="M12.53,1.53A10.77,10.77,0,0,1,23.3,12.3h1.53A12.3,12.3,0,0,0,12.53,0Z"/><path d="M12.53,9.33v1.55A1.43,1.43,0,0,1,14,12.3H15.5A3,3,0,0,0,12.53,9.33Z"/><path d="M12.53,6.25a6.05,6.05,0,0,1,6,6.05h1.59a7.64,7.64,0,0,0-7.64-7.64Z"/></svg>
+					</label>
+					<label class="form__label form__contacts-label">
+						<span class="form__contacts-text">E-mail</span>
+						<input class="form__contacts-inp form__text-inp" type="email" name="e-mail" placeholder="Ваш Email*">
+						<svg class="form__contacts-mail-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="21" viewBox="0 0 32 21"><path d="M28,0H4A4,4,0,0,0,0,4V17a4,4,0,0,0,4,4H28a4,4,0,0,0,4-4V4A4,4,0,0,0,28,0ZM2,5.25,9,10.5,2,15.75ZM30,17a2,2,0,0,1-2,2H4a2,2,0,0,1-2-2l7.83-5.87L14.2,14.4a3,3,0,0,0,3.6,0l4.37-3.27L30,17Zm0-1.25L23,10.5l7-5.25ZM17.2,13.6a2,2,0,0,1-2.4,0l-4.14-3.1-.83-.62L2,4H2A2,2,0,0,1,4,2H28a2,2,0,0,1,2,2Z" fill="#333"/></svg>
+					</label>
+				</fieldset>
+			</div>
 
-			<fieldset class="form__additionally">
-				<legend>Доп</legend>
-				<textarea name="text" cols="30" rows="10" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-			</fieldset>
+			<div class="container">
+				<fieldset class="form__group form__additionally">
+					<legend class="form__legend form__textarea-legend">Доп</legend>
+					<textarea class="form__textarea" name="text" cols="30" rows="10" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+				</fieldset>
+			</div>
 
-			<small class="form__required">*Поля обязательны для заполнения</small>
-			<button class="form__btn btn" type="submit">отправить заказ</button>
+			<div class="container form__bottom">
+				<small class="form__required">*Поля обязательны для заполнения</small>
+				<button class="form__btn btn" type="submit">отправить заказ</button>
+			</div>
 		</form>
 	</main>
 
