--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	</header>
 
 	<main>
-		<!-- Модалка ------------------------------------------------------------------ -->
+		<!-- Модалка  -->
 		<section class="modal">
 			<div class="modal__inner">
 				<h2 class="modal__title">Добавить в корзину</h2> 
@@ -90,7 +90,7 @@
 				</form>
 			</div>		
 		</section>
-		<!-- -------------------------------------------------------------------------- -->
+		<!--  -->
 
 
 		<section class="main-section">
